--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=146d6dd0d84035a8abb0",
-    "/css/app.css": "/css/app.css?id=a7fa938fe6efba01d122"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
