--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=146d6dd0d84035a8abb0",
+    "/css/app.css": "/css/app.css?id=2f3d76847cb4f07d5edd"
 }
